--- a/SEA_Application/Views/AspnetLessons/LessonSessionView.cshtml
+++ b/SEA_Application/Views/AspnetLessons/LessonSessionView.cshtml
@@ -4,174 +4,270 @@
     Layout = "~/Views/Shared/_AdminDashboardLayout.cshtml";
 }
 
-    <div class="row">
-        <div class="col-md-12">
-            <div class="card">
-                <div class="card-body p-5">
-                    <div>
-                        <div class="table-responsive">
+    <style>
+
+        /*#datatable_filter
+        {
+            display:inline-block !important;
+        }*/
+        .hidden{
+            display:none;
+
+        }
+     
+
+    </style>
+<div class="row">
+    <div class="col-md-12">
+        <div class="card">
+            <div class="card-body p-5">
+                <div>
+                    <div class="table-responsive">
 
 
-                            <table class="table table1 hover table-bordered table-striped" id="datatable">
-                                <thead>
-                                    <tr>
-                                        @*<th>Id</th>*@
-                                        <th>
-                                            Subject Name
-                                        </th>
-                                        <th>
-                                            Lesson Name
-                                        </th>
+                        <table class="table table1 hover table-bordered table-striped" id="datatable">
+                            <thead>
+                                <tr>
+                                    <th class="hidden">Id</th>
+                                    <th>
+                                        Subject Name
+                                    </th>
+                                    <th>
+                                        Lesson Name
+                                    </th>
 
-                                        <th>
-                                            Session Name
-                                        </th>
-                                        <th>
-                                            Start Date
-                                        </th>
-                                        <th>
-                                            End Date
-                                        </th>
-                                        <th>
-                                           Action
-                                        </th>
+                                    <th>
+                                        Session Name
+                                    </th>
+                                    <th>
+                                        Start Date
+                                    </th>
+                                    <th>
+                                        End Date
+                                    </th>
+                                    <th>
+                                        Action
+                                    </th>
 
 
-                                    </tr>
-                                </thead>
-                                <tbody id="DefaulterStudents"></tbody>
-                            </table>
-                        </div>
-
+                                </tr>
+                            </thead>
+                            <tbody id="DefaulterStudents"></tbody>
+                        </table>
                     </div>
+
                 </div>
             </div>
         </div>
     </div>
+</div>
 
-                    <script>
+<script>
 
-                        $(document).ready(function () {
+    $(document).ready(function () {
 
-                            $("#PageHeader").html("Schedule Lesson ");
+        $("#global_filter").attr('placeholder', 'Search');
+        $("#PageHeader").html("Schedule Lesson ");
 
-                        $("#BreadCrumbs").append(' <li> <a href="/Account/Dashboard"> Home </a> <span>&gt;</span></li>');
-                        $("#BreadCrumbs").append(' <li class="active"><a id="BreadCrumps1" href="#">Lesson Sessions</a></li>');
-                        $("#generic_div").removeClass('hidden');
-
-
-
-                            var table = $('#datatable').dataTable({
-                                buttons: [
-                                    {
-                                        text: '<span class="datatableButtonsReset"> <img src="/Content/assets/assets/icons/Icon-Reset2.png" alt=""> Reset</span>'
-                                    },
-                                    {
-                                        text: '<span class="datatableButtonsEdit"> <img src="/Content/assets/assets/icons/Icon-edit.png" alt=""> Create</span>',
-                                        action: function (e, dt, button, config) {
-                                            window.location.href = '/AspnetLessons/CreateLessonSession';
-                                        }
-                                    },
-                                    {
-                                        text: '<span class="datatableButtonsDownload"> <img src="/Content/assets/assets/icons/Icon-download.png" alt=""> Download</span>'
-                                    }
-                                ],
-                                "language": {
-                                    "lengthMenu": "<div class=\"d-flex showEntriesCon\">\n" +
-                                        "  <div class=\"p-2\">Show </div> <div class=\"showEntries\"> _MENU_\n" +
-                                        "  </div>\n" +
-                                        "  </div>",
-                                    "info": "<div class='showingEntriesOfTotal'>Showing <span class=\"text-info\">_START_ to _END_</span> of _TOTAL_ entries</div>",
-                                    "paginate": {
-                                        "first": "Firstt",
-                                        "last": "Lastt",
-                                        "next": ' <img src="~/Content/assets/assets/icons/Arrow2.png" alt=""> ',
-                                        "previous": ' <img src="~/Content/assets/assets/icons/Arrow1.png" alt=""> '
-                                    }
-                                },
-                                "searching": true,
-                                // dom: '<"class">Blfrtip',
-                                dom: "<'row mb-3'<'col-sm-12 col-md-2 col-lg-2'l><'col-sm-12 col-md-10 col-lg-10 datatableButtonsCon text-right'Bf>>" +
-                                    "<'row'<'col-sm-12 datatablesData'tr>>" +
-                                    "<'row mt-4'<'col-sm-12 col-md-4 col-lg-6 infoCon'i><'col-sm-12 col-md-8 col-lg-6 pagCon'p>>",
-                            });
-                            $('input#global_filter').on('keyup click', function () {
-                                filterGlobal();
-                            });
+        $("#BreadCrumbs").append(' <li> <a href="/Account/Dashboard"> Home </a> <span>&gt;</span></li>');
+        $("#BreadCrumbs").append(' <li class="active"><a id="BreadCrumps1" href="#">Lesson Sessions</a></li>');
+        $("#generic_div").removeClass('hidden');
 
 
 
+        var table = $('#datatable').dataTable({
+            buttons: [
+                {
+                    text: '<span class="datatableButtonsReset"> <img src="/Content/assets/assets/icons/Icon-Reset2.png" alt=""> Reset</span>'
+                },
+                {
+                    text: '<span class="datatableButtonsEdit"> <img src="/Content/assets/assets/icons/Icon-edit.png" alt=""> Create</span>',
+                    action: function (e, dt, button, config) {
+                        window.location.href = '/AspnetLessons/CreateLessonSession';
+                    }
+                },
+                {
+                    text: '<span class="datatableButtonsDownload"> <img src="/Content/assets/assets/icons/Icon-download.png" alt=""> Download</span>'
+                }
+            ],
+            "language": {
+                "lengthMenu": "<div class=\"d-flex showEntriesCon\">\n" +
+                    "  <div class=\"p-2\">Show </div> <div class=\"showEntries\"> _MENU_\n" +
+                    "  </div>\n" +
+                    "  </div>",
+                "info": "<div class='showingEntriesOfTotal'>Showing <span class=\"text-info\">_START_ to _END_</span> of _TOTAL_ entries</div>",
+                "paginate": {
+                    "first": "Firstt",
+                    "last": "Lastt",
+                    "next": ' <img src="~/Content/assets/assets/icons/Arrow2.png" alt=""> ',
+                    "previous": ' <img src="~/Content/assets/assets/icons/Arrow1.png" alt=""> '
+                }
+            },
+            "searching": true,
+            // dom: '<"class">Blfrtip',
+            dom: "<'row mb-3'<'col-sm-12 col-md-2 col-lg-2'l><'col-sm-12 col-md-10 col-lg-10 datatableButtonsCon text-right'Bf>>" +
+                "<'row'<'col-sm-12 datatablesData'tr>>" +
+                "<'row mt-4'<'col-sm-12 col-md-4 col-lg-6 infoCon'i><'col-sm-12 col-md-8 col-lg-6 pagCon'p>>",
+
+               "bServerSide": true,
+                 "sAjaxSource": "/AspnetLessons/GetLessonSessions",
+            "fnServerData": function (sSource, aoData, fnCallback) {
+
+                    $.ajax({
+
+                        type: "POST",
+                        data:aoData,
+                        url: sSource,
+                        success:fnCallback
+                    })
+
+            },
+            
+            "aoColumns": [
+
+                {
+                     "mData": "Id", "name": "Id" , "class":"hidden",
+                },
+                { "mData": "SubjectName" },
+                { "mData": "Name" },
+                { "mData": "SessionName" },
+                {
+                    
+
+                    "mData": "StartDate", "name": "StartDate",
+                    "render": function (jsonDate) {
+
+                        var value = new Date(parseInt(jsonDate.replace(/(^.*\()|([+-].*$)/g, '')));
+                        var dat = value.getMonth() +
+                            1 +
+                            "/" +
+                            value.getDate() +
+                            "/" +
+                            value.getFullYear();// + " " +
+
+                        return dat;
+                    }
 
 
-                            $.ajax({
+                },
+                {
+                    
 
-                                type: "POST",
-                                url: '/AspnetLessons/GetLessonSessions',
-                                success: function (data) {
-                                    table.fnClearTable();
+                    "mData": "DueDate", "name": "DueDate",
+                    "render": function (jsonDate) {
 
+                        var value = new Date(parseInt(jsonDate.replace(/(^.*\()|([+-].*$)/g, '')));
+                        var dat = value.getMonth() +
+                            1 +
+                            "/" +
+                            value.getDate() +
+                            "/" +
+                            value.getFullYear();// + " " +
 
-                                    $.each(data, function (index) {
-
-                                        debugger
-                                        var value = new Date(parseInt(data[index].StartDate.replace(/(^.*\()|([+-].*$)/g, '')));
-                                        var dat = value.getMonth() +
-                                            1 +
-                                            "/" +
-                                            value.getDate() +
-                                            "/" +
-                                            value.getFullYear();
-
-
-                                            var value = new Date(parseInt(data[index].DueDate.replace(/(^.*\()|([+-].*$)/g, '')));
-                                        var dat1 = value.getMonth() +
-                                            1 +
-                                            "/" +
-                                            value.getDate() +
-                                            "/" +
-                                            value.getFullYear();
+                        return dat;
+                    }
 
 
 
-                                        table.fnAddData([data[index].SubjectName+"<input  type=hidden value="+data[index].Id+">",data[index].Name, data[index].SessionName,dat,dat1,"<button id ='DeleteButton' onclick='DeleteLessonSession("+data[index].Id+")'  name ='"+data[index].Id+"' style='cursor:pointer;color:white' class='btn btn-danger deleteButton' >Delete</button>"]);
 
-                                    })
+                },
+                {
+                     "mData": "Id", "name": "Id", 
 
-                                    table.fnDraw();
-                                }
-                            })
+                  
+                    "render": function (Id) {
 
-          $('.table1').on('click', 'tbody tr', function () {
-              var td = $(this).children("td");
+                         return '<button id ="DeleteButton" name ="' + Id + '" onclick="DeleteLessonSession(' + Id + ')" class="btn btn-sm btn-danger deleteButton" style="cursor:pointer;color:white !important"  >Delete</button>';
 
-            var hiddenid = $(td[0]).children("input").val();
+                    }
+
+                    
+                },
+    
+
+            ]
+
+        });
+        $('input#global_filter').on('keyup click', function () {
+            filterGlobal();
+
+        });
+         
+
+
+
+
+
+        //$.ajax({
+
+        //    type: "POST",
+        //    url: '/AspnetLessons/GetLessonSessions',
+        //    success: function (data) {
+        //        table.fnClearTable();
+
+
+        //        $.each(data, function (index) {
+
+        //            debugger
+        //            var value = new Date(parseInt(data[index].StartDate.replace(/(^.*\()|([+-].*$)/g, '')));
+        //            var dat = value.getMonth() +
+        //                1 +
+        //                "/" +
+        //                value.getDate() +
+        //                "/" +
+        //                value.getFullYear();
+
+
+        //            var value = new Date(parseInt(data[index].DueDate.replace(/(^.*\()|([+-].*$)/g, '')));
+        //            var dat1 = value.getMonth() +
+        //                1 +
+        //                "/" +
+        //                value.getDate() +
+        //                "/" +
+        //                value.getFullYear();
+
+
+
+        //            table.fnAddData([data[index].SubjectName + "<input  type=hidden value=" + data[index].Id + ">", data[index].Name, data[index].SessionName, dat, dat1, "<button id ='DeleteButton' onclick='DeleteLessonSession(" + data[index].Id + ")'  name ='" + data[index].Id + "' style='cursor:pointer;color:white' class='btn btn-danger deleteButton' >Delete</button>"]);
+
+        //        })
+
+        //        table.fnDraw();
+        //    }
+        //})
+
+        $('.table1').on('click', 'tbody tr', function () {
+            var td = $(this).children("td");
+
+            var hiddenid = $(td[0]).html();
+
+//              var Id = parseInt(hiddenid);
 
             //alert($(td[0]).html());
-              var Id = parseInt(hiddenid);
 
 
-             //alert(Id);
+            //alert(Id);
             //userName = userName.trim();
-           // window.location.href = "/AspnetLessons/EditLessonSession?id=" + Id;
+            // window.location.href = "/AspnetLessons/EditLessonSession?id=" + Id;
         });
 
-                            $(".deleteButton").click(function () {
+        $(".deleteButton").click(function () {
 
-                                alert("clicked");
-                            })
-
-
-
-
-                        })
-
-                        function DeleteLessonSession(id) {
-
-
-                         window.location.href = "/AspnetLessons/DeleteLessonSession?id=" + id;
+            alert("clicked");
+        })
 
 
 
-                        }
-             
-                    </script>
+
+    })
+
+    function DeleteLessonSession(id) {
+
+
+        window.location.href = "/AspnetLessons/DeleteLessonSession?id=" + id;
+
+
+
+    }
+
+</script>
